--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "indecision-app",
-  "version": "version (1.0.0)",
+  "version": "version 1.0.0",
   "main": "index.js",
   "author": "rachel",
   "license": "MIT",
