--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "^16.13.1",
     "react-addons-shallow-compare": "15.6.0",
@@ -43,13 +44,13 @@
     "webpack": "^4.43.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.11",
-    "jest": "20.0.4",
-    "live-server": "^1.2.1",
-    "webpack-dev-server": "^3.11.0",
-    "react-test-renderer": "16.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1"
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "live-server": "^1.2.1",
+    "react-test-renderer": "16.0.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   }
 }
