--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "rachel",
   "license": "MIT",
+  "engines": {
+    "node": "13.x"
+  },
   "scripts": {
     "serve": "live-server public/",
     "build:dev": "webpack",
